@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2005/02/24 12:13:59 agc Exp $
+$NetBSD: distinfo,v 1.3 2006/01/26 02:00:16 hiramatsu Exp $
 
-SHA1 (Net-Pcap-0.05.tar.gz) = 9bbbbb84174c63d7013fa51b85c440c935e537f8
-RMD160 (Net-Pcap-0.05.tar.gz) = 12324461dbb5cead176a67696f3126ff3ebaa360
-Size (Net-Pcap-0.05.tar.gz) = 10683 bytes
+SHA1 (Net-Pcap-0.11.tar.gz) = 29240d268437e1f9e64a487004847e988526114c
+RMD160 (Net-Pcap-0.11.tar.gz) = dd3008690d33994e7727cb19b57587e8910fe825
+Size (Net-Pcap-0.11.tar.gz) = 70702 bytes
